--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="./style.css"> 
     </head>
-    <body>
+    <body class="backg">
         <nav class="navbar">
             <h1 class="logo">ADVENTURE</h1>
             <ul class="nav-links">
